--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.svg" sizes="32x32" />
+    <link rel="shortcut icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/Logos/Laranja Sem fundo.svg" />
     <link rel="manifest" href="/manifest.json" />
     
