Finaliza ajustes no site da Dra. Priscilla: conteúdo, posicionamento e estilo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- SEO Meta Tags -->
-    <title>Dra. Priscilla Almeida - Medicina do Esporte e Qualidade de Vida</title>
-    <meta name="description" content="Transforme sua performance e qualidade de vida com Medicina do Esporte. Dra. Priscilla Almeida: Anestesiologia, Psicanálise e abordagem integrativa para atletas e pessoas ativas." />
-    <meta name="keywords" content="medicina do esporte, anestesiologia, psicanálise, performance, hipertrofia, emagrecimento, atletas, qualidade de vida, medicina integrativa, São Paulo, Alphaville, Barueri" />
+    <title>Dra. Priscilla Almeida - Performance e Saúde da Mulher</title>
+    <meta name="description" content="Transforme sua performance e qualidade de vida com Performance Esportiva e Saúde da Mulher 40+. Dra. Priscilla Almeida: atendimento 100% online, abordagem personalizada e baseada em evidências." />
+    <meta name="keywords" content="performance esportiva, saúde da mulher, longevidade, medicina do esporte, atendimento online, medicina personalizada, mulheres 40+, qualidade de vida, Priscilla Almeida" />
     <meta name="author" content="Dra. Priscilla Almeida" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://draprisports.com" />
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://draprisports.com" />
-    <meta property="og:title" content="Dra. Priscilla Almeida - Medicina do Esporte e Qualidade de Vida" />
-    <meta property="og:description" content="Transforme sua performance e qualidade de vida com Medicina do Esporte. Dra. Priscilla Almeida: Anestesiologia, Psicanálise e abordagem integrativa para atletas e pessoas ativas." />
+    <meta property="og:title" content="Dra. Priscilla Almeida - Performance e Saúde da Mulher" />
+    <meta property="og:description" content="Transforme sua performance e qualidade de vida com Performance Esportiva e Saúde da Mulher 40+. Dra. Priscilla Almeida: atendimento 100% online, abordagem personalizada e baseada em evidências." />
     <meta property="og:image" content="https://draprisports.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -34,8 +34,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://draprisports.com" />
-    <meta name="twitter:title" content="Dra. Priscilla Almeida - Medicina do Esporte e Qualidade de Vida" />
-    <meta name="twitter:description" content="Transforme sua performance e qualidade de vida com Medicina do Esporte. Anestesiologia, Psicanálise e abordagem integrativa." />
+    <meta name="twitter:title" content="Dra. Priscilla Almeida - Performance e Saúde da Mulher" />
+    <meta name="twitter:description" content="Transforme sua performance e qualidade de vida com Performance Esportiva e Saúde da Mulher 40+. Atendimento 100% online, abordagem personalizada e baseada em evidências." />
     <meta name="twitter:image" content="https://draprisports.com/og-image.jpg" />
     <meta name="twitter:image:alt" content="Dra. Priscilla Almeida - Médica do Esporte" />
     <meta name="twitter:site" content="@draprisports" />
@@ -51,25 +51,18 @@
       "@context": "https://schema.org",
       "@type": "MedicalBusiness",
       "name": "Dra. Priscilla Almeida",
-      "description": "Médica do Esporte especializada em performance, hipertrofia, emagrecimento e qualidade de vida",
+      "description": "Performance esportiva, saúde da mulher 40+, longevidade e atendimento 100% online com abordagem personalizada.",
       "url": "https://draprisports.com",
       "telephone": "+55 11 96314-5317",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Alameda Grajaú, 98 - 18º andar",
-        "addressLocality": "Barueri",
-        "addressRegion": "SP",
-        "addressCountry": "BR"
-      },
       "areaServed": {
         "@type": "Place",
-        "name": "São Paulo, Brasil"
+        "name": "Brasil"
       },
       "priceRange": "$$",
       "medicalSpecialty": [
         "Sports Medicine",
-        "Anesthesiology",
-        "Integrative Medicine"
+        "Women's Health",
+        "Longevity"
       ],
       "sameAs": [
         "https://www.instagram.com/draprisports/",
@@ -78,7 +71,7 @@
       "founder": {
         "@type": "Person",
         "name": "Priscilla Almeida",
-        "jobTitle": "Médica do Esporte",
+        "jobTitle": "Médica do Esporte e Saúde da Mulher",
         "alumniOf": "Universidade Federal de São Paulo - UNIFESP"
       }
     }
